fix: improve imports and scope reports by year
